# SRE-AGENT-JAN-2026

./: .env.deployment  .gitignore  .gitmodules  BUG_REPORT_FOR_UPSTREAM.md  Dockerfile.grafana-mcp-streamable  PHASE4_STATUS.md  PROJECT_SUMMARY.md  README.md  SETUP_FINDINGS_AND_LESSONS_LEARNED.md  deploy-loki.sh  deploy-mcp-servers.sh  jira-deployment.sh  my_first_deployment_values.sh  test-grafana-mcp-local.sh  test-question.txt
aca-locked-testbed/: README.md  azure.yaml
ai-governance/: README.md  anthropic-usage-policy.md  model-data-handling.md
aks-locked-testbed/: README.md  aq-initial-analysis.md  azure.yaml
aks-private-testbed/: LESSONS-LEARNED.md  README.md  TEST-RESULTS.md  azure.yaml  tools.md
blog-posts/: BLOG-SRE-AGENT-PRIVATE-AKS-DRAFT.docx  BLOG-SRE-AGENT-PRIVATE-AKS-DRAFT.html  BLOG-SRE-AGENT-PRIVATE-AKS-DRAFT.md  convert_to_docx.py  postprocess.py
dashboards/: sre-troubleshooting-cockpit.json
docs/: ACA_TESTBED_VALIDATION_REPORT.md  AKS-CLUSTER-VALIDATION-13-APRIL-2026.md  ANKIT_SYNC_MARCH_18_2026.md  BLOG-SRE-AGENT-PRIVATE-AKS-DRAFT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_TIME_TRACKER.md  DIAGNOSTIC_EXPERT_INSTRUCTIONS_V2.md  LINKS_OF_INTEREST.txt  PARTNER_POC_GUIDE.md  PHASE4_STATUS.md  PHASE5_ACTUAL_SETUP_GUIDE.md  PROJECT_SUMMARY.md  PoC-GAP-ANALYSIS-9-APRIL-2026.md  RCA-GROCERY-API-429-2026-03-18.md  RCA_AGENT_INSTRUCTIONS.md  README.md  SETUP_FINDINGS_AND_LESSONS_LEARNED.md  SRE_AGENT_QUICK_RECREATE.md  aks-setup-guide.md  (+3 more)
pim-enablement-testbed/mcp-servers/pim-mcp/: Dockerfile  README.md  pyproject.toml  server.py  tools.py
(+176 files in other folders)
