[project]
name = "pim-mcp"
version = "0.6.1"
description = "PIM gap-filler MCP — read-only Graph proxy (pending requests, request status, active assignments, approver audit, user/role lookups, streamable-http)"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=0.4.0",
    "azure-identity>=1.19.0",
    "httpx>=0.27.0",
]

[tool.uv]
package = false
