[project]
name = "pim-mcp"
version = "0.9.0"
description = "PIM gap-filler MCP — read-only Graph proxy (pending requests, request history with time-window filter, request status, active + eligible assignments, approver audit, user/role/group lookups, inline scope labels, streamable-http)"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=0.4.0",
    "azure-identity>=1.19.0",
    "httpx>=0.27.0",
]

[tool.uv]
package = false
