[project]
name = "pim-mcp"
version = "0.10.0"
description = "PIM gap-filler MCP — read-only Graph + ARM proxy. Graph tools cover directory-scope PIM (Entra roles); Wave C 0.10.0 adds three ARM tools (arm_get_request_status, arm_get_request_approver, arm_get_role_definition) covering Azure-RBAC PIM at subscription/RG/resource scope. 12 tools total."
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=0.4.0",
    "azure-identity>=1.19.0",
    "httpx>=0.27.0",
]

[tool.uv]
package = false
